--- a/css/style.css
+++ b/css/style.css
@@ -19,12 +19,11 @@ figure {
 }
 h2 {
   font-size: 30px;
+  line-height: 42px;
 }
 h3 {
   font-size: 24px;
-}
-ul {
-  list-style: none;
+  line-height: 30px;
 }
 main {
   color: #000;
@@ -92,7 +91,7 @@ input:focus:-ms-input-placeholder      {text-indent: 500px; transition: text-ind
   background-color: #000;
 }
 .inner-page {
-    background: white url("../img/content-background.jpg");
+    background: #f8f3f0 url("../img/content-background.jpg") repeat;
 }
 
 
@@ -413,4 +412,151 @@ input:focus:-ms-input-placeholder      {text-indent: 500px; transition: text-ind
 }
 .login-form button {
   width: 100%;
+}
+
+
+/* Price Page */
+
+.inner-page .main-header {
+  margin-bottom: 55px;
+}
+.inner-page-title {
+  margin-bottom: 55px;
+}
+.inner-page-title h2 {
+  margin: 0;
+  padding: 0;
+  margin-bottom: 20px;
+}
+.breadcrumbs {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+.breadcrumbs li {
+  position: relative;
+  display: inline;
+  padding-right: 40px;
+}
+.breadcrumbs li:after {
+  content: "";
+  position: absolute;
+  top: 4px;
+  right: 14px;
+  width: 8px;
+  height: 8px;
+  background: #000;
+  -webkit-transform: rotate(45deg);
+     -moz-transform: rotate(45deg);
+      -ms-transform: rotate(45deg);
+       -o-transform: rotate(45deg);
+          transform: rotate(45deg);
+}
+.breadcrumbs a {
+  text-decoration: none;
+  color: #000;
+}
+.breadcrumbs a:hover {
+  text-decoration: underline;
+}
+.breadcrumbs .current a {
+  color: #aba9a7;
+}
+.breadcrumbs .current:after {
+  content: none;
+}
+
+.inner-content {
+  margin-bottom: 75px;
+}
+.inner-content h3 {
+  margin-bottom: 30px;
+  margin-top: 60px;
+}
+.inner-content p {
+  margin: 14px 0;
+}
+.prices-table {
+  border-collapse: collapse;
+  width: 100%;
+}
+.prices-table td {
+  border: 2px solid black;
+  padding: 10px 15px;
+  width: 50%;
+}
+.prices-table td:last-child {
+  text-align: center;
+}
+.big-heading {
+  margin-top: 55px;
+  margin-bottom: 65px;
+  text-align: center;
+}
+.big-heading span {
+  font-size: 48px;
+  line-height: 48px;
+  text-align: center;
+  display: inline;
+  margin: 0;
+  padding: 0 25px;
+  position: relative;
+  z-index: 2;
+  background: #f8f3f0 url("../img/content-background.jpg") repeat;
+}
+.big-heading:after {
+  content: "";
+  display: block;
+  border-bottom: 2px solid #000;
+  position: relative;
+  top: -25px;
+  z-index: 1;
+}
+.custom-list-1 {
+  list-style: none;
+  margin: 14px 0;
+  padding: 0;
+}
+.custom-list-1 li {
+  padding-left: 20px;
+  margin-bottom: 15px;
+  position: relative;
+}
+.custom-list-1 li:before {
+  content: "";
+  position: absolute;
+  top: 7px;
+  left: 1px;
+  width: 8px;
+  height: 8px;
+  background: #000;
+  -webkit-transform: rotate(45deg);
+     -moz-transform: rotate(45deg);
+      -ms-transform: rotate(45deg);
+       -o-transform: rotate(45deg);
+          transform: rotate(45deg);
+}
+.inner-content-columns {
+  margin: 60px 0;
+}
+.inner-content-column-left,
+.inner-content-column-right {
+  width: 460px;
+}
+.inner-content-column-left {
+  float: left;
+}
+.inner-content-column-right {
+  float: right;
+}
+.inner-content-column-left *:first-child,
+.inner-content-column-right *:first-child {
+  margin-top: 0;
+}
+.inner-content-column-left *:last-child,
+.inner-content-column-right *:last-child {
+  margin-bottom: 0;
+}
+.short-text {
+  width: 385px;
 }
