--- a/css/style.css
+++ b/css/style.css
@@ -364,7 +364,7 @@ input:focus:-ms-input-placeholder      {text-indent: 500px; transition: text-ind
 
 /* Login window */
 
-.login-form {
+.modal-login {
   color: #000;
   position: fixed;
   top: 120px;
@@ -372,11 +372,11 @@ input:focus:-ms-input-placeholder      {text-indent: 500px; transition: text-ind
   margin-left: -230px;
   width: 300px;
   display: none;
-  padding: 55px 80px;
-  background-image: url("../img/content-background.jpg");
-  background-repeat: repeat;
+  padding: 50px 80px;
+  background: #f8f3f0 url("../img/content-background.jpg") repeat;
+  box-shadow: 0 30px 50px rgba(0,0,0,.7);
 }
-.login-form-close {
+.modal-login-close {
   position: absolute;
   right: -55px;
   top: 55px;
@@ -385,35 +385,70 @@ input:focus:-ms-input-placeholder      {text-indent: 500px; transition: text-ind
   background: url("../img/sprites.png") 0 -140px no-repeat;
   cursor: pointer;
 }
-.login-form .login-header {
-  padding-bottom: 30px;
+.modal-login-title {
+  margin: 0;
+  margin-bottom: 20px;
 }
-.login-form p {
-  padding-bottom: 30px;
+.modal-login p {
+  margin:0;
+  margin-bottom: 14px;
+}
+.login-form {
+  margin-top: 30px;
+  margin-bottom: 10px;
 }
 .login-form input {
   display: block;
-  width: 264px;
+  width: 239px;
   margin-bottom: 10px;
+  padding-right: 40px;
 }
 .login-form input:focus {
   border: 2px solid #663d15;
   outline: 0;
 }
-.login-form .remember-forget-block {
-  padding-top: 5px;
-  padding-bottom: 15px;
+.login-form .icon-login {
+  background: no-repeat url("../img/sprites.png") 100% -893px;
 }
-.remember-forget-block label {
-  float: left;
+.login-form .icon-password {
+  background: no-repeat url("../img/sprites.png") 100% -267px;
 }
-.remember-forget-block .forget-pass {
+.login-form input[type="checkbox"] {
+  display: none;
+}
+.restore {
   float: right;
 }
-.login-form button {
+.login-form .btn-submit {
   width: 100%;
+  margin-top: 15px;
 }
-
+.login-form input[type="checkbox"] + label {
+  position: relative;
+  display: inline-block;
+  vertical-align: top;
+  padding-left: 30px;
+  cursor: pointer;
+}
+.login-form input[type="checkbox"] + label:hover {
+  color: #663d15;
+}
+.login-form input[type="checkbox"] + label:before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 18px;
+  height: 18px;
+  border: 2px solid #000;
+}
+.login-form input[type="checkbox"]:checked + label::before {
+  content: "";
+  position: absolute;
+  width: 18px;
+  height: 18px;
+  background: url("../img/sprites.png") -1px -1px no-repeat;
+}
 
 /* Price Page */
 
