--- a/css/style.css
+++ b/css/style.css
@@ -116,6 +116,7 @@ input:focus:-ms-input-placeholder      {text-indent: 500px; transition: text-ind
 }
 .main-navigation {
   float: left;
+  width: 780px;
 }
 .main-navigation ul {
   font-size: 0;
@@ -375,6 +376,7 @@ input:focus:-ms-input-placeholder      {text-indent: 500px; transition: text-ind
   padding: 50px 80px;
   background: #f8f3f0 url("../img/content-background.jpg") repeat;
   box-shadow: 0 30px 50px rgba(0,0,0,.7);
+  z-index: 100;
 }
 .modal-login-close {
   position: absolute;
@@ -384,6 +386,17 @@ input:focus:-ms-input-placeholder      {text-indent: 500px; transition: text-ind
   height: 22px;
   background: url("../img/sprites.png") 0 -140px no-repeat;
   cursor: pointer;
+}
+.modal-login-visible {
+  display: block;
+  -webkit-animation: bounce 0.6s;
+       -o-animation: bounce 0.6s;
+          animation: bounce 0.6s;
+}
+.modal-error {
+  -webkit-animation: shake 0.6s;
+       -o-animation: shake 0.6s;
+          animation: shake 0.6s;
 }
 .modal-login-title {
   margin: 0;
@@ -594,4 +607,59 @@ input:focus:-ms-input-placeholder      {text-indent: 500px; transition: text-ind
 }
 .short-text {
   width: 385px;
+}
+
+
+/* Animations */
+
+@keyframes bounce {
+  0% {
+    transform: translateY(-2000px);
+  }
+  70% {
+    transform: translateY(30px);
+  }
+  90% {
+    transform: translateY(-10px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+@-webkit-keyframes bounce {
+  0% {
+    transform: translateY(-2000px);
+  }
+  70% {
+    transform: translateY(30px);
+  }
+  90% {
+    transform: translateY(-10px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
+@keyframes shake {
+ 0%, 100% {
+   transform: translateX(0);
+ }
+ 10%, 30%, 50%, 70%, 90% {
+   transform: translateX(-10px);
+ }
+ 20%, 40%, 60%, 80% {
+   transform: translateX(10px);
+ }
+}
+@-webkit-keyframes shake {
+ 0%, 100% {
+   transform: translateX(0);
+ }
+ 10%, 30%, 50%, 70%, 90% {
+   transform: translateX(-10px);
+ }
+ 20%, 40%, 60%, 80% {
+   transform: translateX(10px);
+ }
 }
