--- a/css/style.css
+++ b/css/style.css
@@ -302,9 +302,10 @@ input:focus:-ms-input-placeholder      {text-indent: 500px; transition: text-ind
 /* Footer */
 
 .main-footer {
-  background: #222 url("../img/footer-background.jpg");
+  background: #333 url("../img/footer-background.jpg");
   margin-top: 60px;
   padding: 60px 0;
+  box-shadow: inset 0 60px 20px -30px rgba(0, 0, 0, 0.5);
 }
 .main-footer-column {
   display: inline-block;
